--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@wdio/cli": "^7.0.7"
   },
   "devDependencies": {
-    "@wdio/local-runner": "^7.0.7",
+    "@wdio/local-runner": "^7.1.0",
     "@wdio/mocha-framework": "^7.0.7",
     "@wdio/spec-reporter": "^7.0.7",
-    "@wdio/sync": "^7.0.7",
+    "@wdio/sync": "^7.1.0",
     "chromedriver": "^88.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3",
     "wdio-chromedriver-service": "^7.0.0"
   }
 }
